Navbar Extra Space Fix for styleTESTtemp.css
Removed extra space

--- a/Web/css/styleTESTtemp.css
+++ b/Web/css/styleTESTtemp.css
@@ -42,7 +42,7 @@ h2 {
 #navbar ul {
 	list-style: none;
 	margin:0;
-	padding: 0.3em;
+	padding-left: 0.3em;
 }
 
 #navbar li {
